<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book Collection</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="title_search">Search</string>
    <string name="all_books">All books</string>
    <string name="all_authors">All authors</string>
    <string name="all_series">All Series</string>
    <string name="all_publishers">All publishers</string>
    <string name="placeholder">Placeholder text</string>
    <string name="search_hint">Search sessions</string>
    <string name="search_label">Google I/O sessions</string>
    <string name="description_search">Search</string>
    <string name="title_book_detail">Book detail</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>

    <string name="searching_book_data">Searching book data...</string>
    <string name="searching_amazon_books">Searching Amazon</string>
    <string name="searching_google_books">Searching Google Books</string>
    <string name="searching_library_thing">Searching LibraryThing</string>
    <string name="searching_good_reads">Searching GoodReads</string>
    <string name="search_exception">Search failed while %1$s: %2$s</string>

    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="isbn">ISBN</string>
    <string name="publisher">Publisher</string>
    <string name="date_published">Date Published</string>
    <string name="rating">Rating</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="read">Have you read this book?</string>
    <string name="series">Series</string>
    <string name="pages">Pages</string>
    <string name="format">Format</string>
    <string name="bookshelves">Bookshelves</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="authors">Authors</string>
    <string name="list_price">List Price</string>
    <string name="book_cover">BookCover</string>
    <string name="shelves">Shelves</string>
    <string name="confirm_add">Add Book</string>
    <string name="confirm_update">Update</string>
    <string name="cancel">Cancel</string>
    
</resources>
