<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.x22.bookcollection.ui.EditBookFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_above="@+id/buttons"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/title" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/subtitle"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/subtitle" />
                </LinearLayout>

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/authors"
                        android:id="@+id/authors_label"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/authors"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/authors"
                        android:layout_below="@+id/authors_label"
                        android:layout_toStartOf="@+id/authors_button" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/authors_button"
                        android:src="@drawable/search"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="false"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/series"
                        android:id="@+id/series_label"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/series"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/series"
                        android:layout_below="@+id/series_label"
                        android:layout_toStartOf="@+id/series_button" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/series_button"
                        android:src="@drawable/search"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="false"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/publisher"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/publisher" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/isbn_label"
                        android:layout_alignParentTop="false"
                        android:layout_centerVertical="true"
                        android:text="@string/isbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/isbn"
                        android:hint="@string/isbn"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_alignParentStart="false"
                        android:layout_toEndOf="@+id/isbn_label"
                        android:nextFocusDown="@+id/series"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/date_published_label"
                        android:layout_alignParentTop="false"
                        android:layout_centerVertical="true"
                        android:text="@string/date_published"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date_published"
                        android:inputType="date"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/date_published"
                        android:layout_toEndOf="@id/date_published_label"
                        android:layout_toStartOf="@+id/date_published_button" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/date_published_button"
                        android:src="@drawable/calendar"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="false"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/description"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/description" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_add" />
    </LinearLayout>

</RelativeLayout>
